# ebay-seller-tool

./: .env.example  .gitignore  .pre-commit-config.yaml  .public-repo  .secret-allowlist  .secret-blocklist  CLAUDE.md  README.md  pyproject.toml  server.py
.github/: dependabot.yml
.github/workflows/: ci.yml  issue-body-scan.yml  stage5-completeness.yml
config/: fees.yaml  pricing_and_content.yaml
docs/research/: 11_EBAY_API_AND_MCP_SERVER.md  12_CREATE_LISTING_AND_UPLOAD_PHOTOS.md
ebay/: analytics.py  auth.py  best_offers.py  browse.py  call_accountant.py  catalogue_loader.py  client.py  content_benchmark.py  end_listing.py  fees.py  hdd_specs.py  listings.py  oauth.py  photos.py  pictures.py  rest.py  selling.py  snapshots.py  stats.py  store.py  title_benchmark.py
ebay/listing_data.example/: hdd-specs.yaml  listing-contract.yaml  series-taxonomy.yaml
scripts/: apply_returns_policy.py  apply_seller_profiles.py  audit-no-product-data.sh  check-hardcoded-params.sh  measure_comp_quality_distribution.py  oauth_setup.py  sample_invocation_issue14.py  sample_invocation_issue29.py  sample_invocation_issue31.py  sample_invocation_issue33.py  sample_invocation_issue444.py  sample_invocation_revise_no_shipping.py  sample_invocation_weekly_snapshot.py
templates/: listing_description.html
tests/: conftest.py  test_analytics_pricing.py  test_apply_returns_policy_refusal.py  test_assert_requires_quantity.py  test_auth.py  test_best_offers.py  test_browse.py  test_build_add_payload.py  test_build_revise_payload_extension.py  test_call_accountant.py  test_catalogue_loader.py  test_comp_filter.py  test_compute_best_offer_thresholds.py  test_compute_diff.py  test_compute_return_rates_bulk.py  test_content_benchmark.py  test_create_listing_tool.py  test_end_listing.py  test_execute_with_retry.py  test_floor_price.py  test_get_elasticity_tool.py  test_get_listing_details_tool.py  test_glob_visual_photos.py  test_hdd_specs.py  test_listing_to_dict_extended.py  test_no_boot_network.py  test_oauth.py  test_parse_iso_ts.py  test_photos.py  test_pricing_review_workflow.py  test_recommend_best_offer_thresholds_tool.py  test_respond_best_offers.py  test_rest_analytics.py  test_revise_pictures.py  test_secret_hook.py  test_selling_tools.py  test_snapshots.py  test_stats.py  test_store.py  test_title_benchmark.py  (+5 more)
tests/fixtures/: get_item_with_best_offer_response.xml  revise_fixed_price_item_response.xml  traffic_report_real.json
