[project]
name = "ebay-seller-mcp"
version = "0.1.0"
description = "MCP server for eBay seller listing management. Built for Claude Code."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "ebaysdk>=2.2.0",
    "httpx>=0.27.0",
    "pillow>=10.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
